--- a/ComposeCarousel/build.gradle
+++ b/ComposeCarousel/build.gradle
@@ -33,8 +33,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -56,16 +56,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
-afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from components.release
 
                 groupId = 'com.github.thebukharian'
                 artifactId = 'Compose-carousel'
-                version = '1.0'
+                version = '2.0'
+
+                afterEvaluate {
+                    from components.release
+
+                }
             }
         }
     }
-}
